--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -287,6 +287,9 @@
     <Compile Include="Models\Suggestion.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Teacher.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -474,6 +477,8 @@
     <Content Include="Views\Admin\EditClass.cshtml" />
     <Content Include="Views\Admin\AddTimetable.cshtml" />
     <Content Include="Views\Admin\AddDatesheet.cshtml" />
+    <Content Include="Views\Admin\Section.cshtml" />
+    <Content Include="Views\Admin\CreateSection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
