--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Models\FeeChallan.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\FeeChallanVM.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\LoginUsers.cs" />
     <Compile Include="Models\LookUp.cs">
@@ -288,6 +289,9 @@
     </Compile>
     <Compile Include="Models\StudentVM.cs" />
     <Compile Include="Models\Suggestion.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Teacher.cs">
@@ -493,6 +497,8 @@
     <Content Include="Views\Admin\Student.cshtml" />
     <Content Include="Views\Admin\AddStudent.cshtml" />
     <Content Include="Views\Admin\EditStudent.cshtml" />
+    <Content Include="Views\Admin\FeeChallans.cshtml" />
+    <Content Include="Views\Admin\EditFeeChallans.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
