--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Models\StudentResult.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\StudentResultVM.cs" />
     <Compile Include="Models\StudentVM.cs" />
     <Compile Include="Models\Suggestion.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
@@ -521,6 +522,9 @@
     <Content Include="Views\Teacher\TeacherSections.cshtml" />
     <Content Include="Views\Teacher\Result.cshtml" />
     <Content Include="Views\Teacher\UploadResult.cshtml" />
+    <Content Include="Views\Teacher\UploadedRes.cshtml" />
+    <Content Include="Views\Teacher\ResultSection.cshtml" />
+    <Content Include="Views\Teacher\EditResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
