--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -300,6 +300,9 @@
     <Compile Include="Models\Suggestion.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Teacher.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -527,6 +530,8 @@
     <Content Include="Views\Admin\AddTimetable.cshtml" />
     <Content Include="Views\Student\LoggedInView.cshtml" />
     <Content Include="Views\Student\ViewDateSheet.cshtml" />
+    <Content Include="Views\Admin\AddPayroll.cshtml" />
+    <Content Include="Views\Teacher\TeacherPayroll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
