--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -529,6 +529,8 @@
     <Content Include="Views\Student\ViewDateSheet.cshtml" />
     <Content Include="Views\Admin\AddPayroll.cshtml" />
     <Content Include="Views\Teacher\TeacherPayroll.cshtml" />
+    <Content Include="Views\Admin\EditStudentDetails.cshtml" />
+    <Content Include="Views\Admin\EditTeacherDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
