--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -536,7 +536,6 @@
     <Content Include="Views\Teacher\ResultSection.cshtml" />
     <Content Include="Views\Teacher\EditResult.cshtml" />
     <Content Include="Views\Teacher\MarkAttendance.cshtml" />
-    <Content Include="Views\Admin\Details.cshtml" />
     <Content Include="Views\Admin\AddTimetable.cshtml" />
     <Content Include="Views\Student\LoggedInView.cshtml" />
     <Content Include="Views\Student\ViewDateSheet.cshtml" />
@@ -560,12 +559,13 @@
     <Content Include="Views\Teacher\Uploadassignments.cshtml" />
     <Content Include="Views\Teacher\Uploadedassign.cshtml" />
     <Content Include="Views\Teacher\ViewAll.cshtml" />
+    <Content Include="Views\Admin\Details.cshtml" />
+    <Content Include="Views\Student\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Files\" />
     <Folder Include="sbc\" />
-    <Folder Include="TFiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
