--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -301,6 +301,9 @@
     <Compile Include="Models\StudentResultVM.cs" />
     <Compile Include="Models\StudentVM.cs" />
     <Compile Include="Models\SubmitFiles.cs" />
+    <Compile Include="Models\SubmittedAssign.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Suggestion.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -561,6 +564,8 @@
     <Content Include="Views\Teacher\ViewAll.cshtml" />
     <Content Include="Views\Admin\Details.cshtml" />
     <Content Include="Views\Student\Detail.cshtml" />
+    <Content Include="Views\Admin\ViewDatesheets.cshtml" />
+    <Content Include="Views\Admin\ViewDateSheet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
