--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -566,6 +566,8 @@
     <Content Include="Views\Student\Detail.cshtml" />
     <Content Include="Views\Admin\ViewDatesheets.cshtml" />
     <Content Include="Views\Admin\ViewDateSheet.cshtml" />
+    <Content Include="Views\Teacher\ViewDateSheet.cshtml" />
+    <Content Include="Views\Teacher\ViewDatesheets.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
