All Classes Report

--- a/SMS/SMS/SMS.csproj
+++ b/SMS/SMS/SMS.csproj
@@ -203,6 +203,12 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="C.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>C.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -580,6 +586,7 @@
     <Content Include="Views\Admin\ViewDateSheet.cshtml" />
     <Content Include="Views\Teacher\ViewDateSheet.cshtml" />
     <Content Include="Views\Teacher\ViewDatesheets.cshtml" />
+    <Content Include="Views\Admin\LoggedInView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -599,6 +606,10 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="C.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>C.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportss\AllStudentsReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>AllStudentsReport.cs</LastGenOutput>
